<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@color/whitesmoke"
    android:minHeight="?attr/actionBarSize">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:gravity="start"
            android:text="@string/back"
            android:textColor="@color/huored"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_marginEnd="10dp"
            android:id="@+id/function"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:src="@drawable/directions"
            android:text="@string/toolbar_function"
            android:textColor="@color/huored"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.v7.widget.Toolbar>