<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <Button
                android:id="@+id/close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/close_login" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/login_head_info"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/user_name"
            android:background="@drawable/edit_background"
            android:padding="7dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_background"
            android:hint="@string/user_pwd"
            android:padding="5dp"
            android:password="true"
            android:singleLine="true" />

        <!--<LinearLayout-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="40dp"-->
        <!--android:orientation="horizontal">-->

        <!--<CheckBox-->

        <!--android:id="@+id/remember"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/check_button_background" />-->

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="25dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:background="@drawable/check_button_tip" />-->

        <!--</LinearLayout>-->


    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/login_background"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/login_background"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp" />
</LinearLayout>